# vox-profile-release

./: pyproject.toml  requirements.txt
vox_profile/model/: masking.py  revgrad.py
vox_profile/model/accent/: wavlm_accent.py  whisper_accent.py
vox_profile/model/age_sex/: wavlm_demographics.py  whisper_demographics.py
vox_profile/model/emotion/: wavlm_emotion.py  wavlm_emotion_dim.py  whisper_emotion.py  whisper_emotion_dim.py
vox_profile/model/fluency/: wavlm_fluency.py  whisper_fluency.py
vox_profile/model/voice_quality/: wavlm_voice_quality.py  whisper_voice_quality.py
