[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vox-profile"
version = "0.1.0"
description = "This repo includes Vox-Profile, one of the first benchmarking efforts that systematically evaluate rich multi-dimensional speaker and speech traits from English-speaking voices."
authors = [
  { name = "Tiantian Feng", email = "tiantiaf@usc.edu" },
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.4.1",
  "torchaudio>=2.4.1",
  "torchvision>=0.19.0",
  "huggingface-hub>=0.31.4,<1.0",
  "loralib>=0.1.2",
  "numpy>=1.24.4",
  "sentencepiece>=0.2.0",
  "speechbrain==1.0.3",
  "transformers>=4.46.3,<5",
]

[tool.setuptools.packages.find]
where = ["."]